# content

./: .gitignore  README.md  docker-compose.yml
.envs/: .db  .rabbitmq  .server
server/: pyproject.toml
server/.linters/: .isort.cfg
server/apps/api/v1/: urls.py
server/apps/content/: apps.py
server/apps/content/admin/: __init__.py  audio.py  text.py  video.py
server/apps/content/models/: __init__.py  audio.py  text.py  utils.py  video.py
server/apps/content/serializers/: __init__.py  audio.py  text.py  video.py
server/apps/core/models/: mixins.py
server/apps/page/: admin.py  apps.py  forms.py  managers.py  models.py  serializers.py  services.py  tasks.py  viewsets.py
server/config/: celery.py  urls.py
server/config/migrations/content/: 0001_initial.py
server/config/migrations/page/: 0001_initial.py
server/config/settings/: __init__.py  celery.py  installed_apps.py  settings.py
